--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=8090
 #spring.datasource.url=jdbc:postgresql://localhost:5432/master_data
 #spring.datasource.url=jdbc:postgresql://localhost:5432/MasterData?currentSchema=iocl
 #local
-#spring.datasource.url=jdbc:postgresql://localhost:5432/iocl
+spring.datasource.url=jdbc:postgresql://localhost:5432/iocl
 #Staging
-spring.datasource.url=jdbc:postgresql://10.146.106.51:5432/genpsqldev
+#spring.datasource.url=jdbc:postgresql://10.146.106.51:5432/genpsqldev
 #Production
 #spring.datasource.url=jdbc:postgresql://10.146.105.81:5432/genpsqldb
 
