--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
 server.port=8090
-
-
 #spring.datasource.url=jdbc:postgresql://localhost:5432/master_data
 #spring.datasource.url=jdbc:postgresql://localhost:5432/MasterData?currentSchema=iocl
 #local
@@ -23,14 +21,23 @@ spring.datasource.password=Deva54DKPv
 #spring.datasource.password=Mpn91Ybrj2
 #server.servlet.session.timeout=1800s
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=none
 
 spring.datasource.driverClassName =org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.hikari.minimum-idle= 10 
-spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle= 2
+spring.datasource.hikari.maximum-pool-size=3
 #spring.datasource.hikari.cachePrepStmts=true
 #spring.datasource.hikari.prepStmtCacheSize=250
 #spring.datasource.hikari.prepStmtCacheSqlLimit=2048
 #spring.datasource.hikari.useServerPrepStmts=true
 #spring.datasource.hikari.maximumPoolSize=5
+spring.datasource.hikari.max-lifetime=1000
+spring.datasource.hikari.connection-timeout=1000
+spring.datasource.hikari.validation-timeout=1000
+
+
+#actuator shutdown
+management.server.port=8098
+management.endpoints.web.exposure.include=shutdown
+management.endpoint.shutdown.enabled=true
